<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/Enternumber2"
        tools:layout_editor_absoluteX="176dp"
        tools:layout_editor_absoluteY="261dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="120dp"
        android:layout_height="24dp"
        android:text="@string/Number_2"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="273dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="120dp"
        android:layout_height="24dp"
        android:text="@string/Number_1"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="172dp" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/Enternumber1"
        tools:layout_editor_absoluteX="176dp"
        tools:layout_editor_absoluteY="161dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Total"
        tools:layout_editor_absoluteX="157dp"
        tools:layout_editor_absoluteY="397dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="92dp"
        android:layout_height="44dp"
        android:text="@string/Button1"
        tools:layout_editor_absoluteX="73dp"
        tools:layout_editor_absoluteY="465dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="85dp"
        android:layout_height="39dp"
        android:text="@string/Button2"
        tools:layout_editor_absoluteX="244dp"
        tools:layout_editor_absoluteY="467dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="88dp"
        android:layout_height="41dp"
        android:text="@string/Button3"
        tools:layout_editor_absoluteX="75dp"
        tools:layout_editor_absoluteY="564dp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="81dp"
        android:layout_height="39dp"
        android:text="@string/Button4"
        tools:layout_editor_absoluteX="244dp"
        tools:layout_editor_absoluteY="561dp" />
</androidx.constraintlayout.widget.ConstraintLayout>