<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstActivity">

    <EditText
        android:id="@+id/editTextNumber2"
        android:layout_width="188dp"
        android:layout_height="40dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="145dp"
        android:layout_height="43dp"
        android:text="@string/Number_1"
        android:textAlignment="center"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="179dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="148dp"
        android:layout_height="44dp"
        android:text="@string/Number_2"
        android:textAlignment="center"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="36dp"
        tools:layout_editor_absoluteY="298dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="130dp"
        android:layout_height="61dp"
        android:text="@string/Button"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="497dp" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="188dp"
        android:layout_height="40dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>